# muTopOpt

./: .gitignore  AUTHORS  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: example_with_parallel_l_bfgs.py  example_with_scipy_l_bfgs.py  optimize_equilat_triangles_grid.py  optimize_negative_poisson.py  plot_results.py  plot_results_old.py
maintenance/: update_license_headers.sh
muTopOpt/: AimFunction.py  Controller.py  Controller_old.py  Filter.py  MaterialDensity.py  PhaseField.py  StressTarget.py  StressTarget_old.py  __init__.py
test/: test_aim_function.py  test_dstress_dmat.py  test_dstress_dphase.py  test_dstress_dphase_old.py  test_filter.py  test_hello_world.py  test_material_density.py  test_parallel.py  test_phase_field.py  test_sensitivity_analysis.py  test_sensitivity_analysis_old.py  test_stress_target.py  test_stress_target_old.py  test_wrapper.py
