[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "python-skeleton"
description = "Python skeleton project"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python"
]
requires-python = ">=3.7.0"
dynamic = [ "version" ]
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
test = [
    "flake8<5",
    "pytest",
    "pytest-cov",
    "pytest-flake8"
]

[project.urls]
documentation = "https://imtek-simulation.github.io/python-skeleton/"
repository = "https://github.com/imtek-simulation/python-skeleton"
changelog = "https://github.com/imtek-simulation/python-skeleton/blob/master/CHANGELOG.md"
