[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "muTopOpt"
description = "Topology optimization for muSpectre"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Indre Jödicke", email = "indre.joedicke@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]
dependencies = [
    "numpy",
    "scipy",
    "NuMPI",
    "muSpectre"
]

[project.optional-dependencies]
test = [
    "flake8<5",
    "pytest",
    "pytest-cov",
    "pytest-flake8"
]

[project.urls]
documentation = "https://imtek-simulation.github.io/muTopOpt/"
repository = "https://github.com/imtek-simulation/muTopOpt"
changelog = "https://github.com/imtek-simulation/muTopOpt/blob/master/CHANGELOG.md"
